{
  "version": 4,
  "terraform_version": "1.7.4",
  "serial": 113,
  "lineage": "f9ab4e9f-0d76-d2da-2077-10c2015379b8",
  "resources": [
    {
      "module": "module.m01-longhorn",
      "mode": "managed",
      "type": "kubernetes_ingress_v1",
      "name": "longhorn",
      "provider": "provider[\"registry.terraform.io/hashicorp/kubernetes\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "longhorn-system/longhorn",
            "metadata": [
              {
                "annotations": {
                  "nginx.ingress.kubernetes.io/auth-realm": "Authentication Required",
                  "nginx.ingress.kubernetes.io/auth-secret": "basic-auth",
                  "nginx.ingress.kubernetes.io/auth-type": "basic"
                },
                "generate_name": "",
                "generation": 1,
                "labels": null,
                "name": "longhorn",
                "namespace": "longhorn-system",
                "resource_version": "3132512",
                "uid": "a34a7f96-61d3-4bb0-980e-0d2526a6fcbe"
              }
            ],
            "spec": [
              {
                "default_backend": [],
                "ingress_class_name": "nginx",
                "rule": [
                  {
                    "host": "longhornuat.local",
                    "http": [
                      {
                        "path": [
                          {
                            "backend": [
                              {
                                "resource": [],
                                "service": [
                                  {
                                    "name": "longhorn-frontend",
                                    "port": [
                                      {
                                        "name": "",
                                        "number": 80
                                      }
                                    ]
                                  }
                                ]
                              }
                            ],
                            "path": "/",
                            "path_type": "ImplementationSpecific"
                          }
                        ]
                      }
                    ]
                  }
                ],
                "tls": []
              }
            ],
            "status": [
              {
                "load_balancer": [
                  {
                    "ingress": []
                  }
                ]
              }
            ],
            "timeouts": null,
            "wait_for_load_balancer": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.m01-longhorn.helm_release.longhorn"
          ]
        }
      ]
    },
    {
      "module": "module.m01-longhorn",
      "mode": "managed",
      "type": "kubernetes_namespace_v1",
      "name": "longhorn-system",
      "provider": "provider[\"registry.terraform.io/hashicorp/kubernetes\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "longhorn-system",
            "metadata": [
              {
                "generation": 0,
                "name": "longhorn-system",
                "resource_version": "3131461",
                "uid": "f1bad4df-89ec-46df-af79-b81db335ad25"
              }
            ],
            "wait_for_default_service_account": false
          }
        }
      ]
    },
    {
      "module": "module.m02-prometheus-stack",
      "mode": "managed",
      "type": "kubernetes_ingress_v1",
      "name": "grafana",
      "provider": "provider[\"registry.terraform.io/hashicorp/kubernetes\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "monitoring/grafana",
            "metadata": [
              {
                "annotations": null,
                "generate_name": "",
                "generation": 1,
                "labels": null,
                "name": "grafana",
                "namespace": "monitoring",
                "resource_version": "3132517",
                "uid": "cbd23de0-ceec-4aca-ae11-b799e0be3474"
              }
            ],
            "spec": [
              {
                "default_backend": [],
                "ingress_class_name": "nginx",
                "rule": [
                  {
                    "host": "grafanauat.local",
                    "http": [
                      {
                        "path": [
                          {
                            "backend": [
                              {
                                "resource": [],
                                "service": [
                                  {
                                    "name": "monitoring-grafana",
                                    "port": [
                                      {
                                        "name": "",
                                        "number": 80
                                      }
                                    ]
                                  }
                                ]
                              }
                            ],
                            "path": "/",
                            "path_type": "ImplementationSpecific"
                          }
                        ]
                      }
                    ]
                  }
                ],
                "tls": []
              }
            ],
            "status": [
              {
                "load_balancer": [
                  {
                    "ingress": []
                  }
                ]
              }
            ],
            "timeouts": null,
            "wait_for_load_balancer": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.m01-longhorn.helm_release.longhorn",
            "module.m01-longhorn.htpasswd_password.hash",
            "module.m01-longhorn.kubernetes_ingress_v1.longhorn",
            "module.m01-longhorn.kubernetes_namespace_v1.longhorn-system",
            "module.m01-longhorn.kubernetes_secret_v1.longhorn-ui-auth",
            "module.m01-longhorn.random_password.basic_auth_password",
            "module.m01-longhorn.random_password.salt"
          ]
        }
      ]
    },
    {
      "module": "module.m02-prometheus-stack",
      "mode": "managed",
      "type": "kubernetes_namespace",
      "name": "monitoring",
      "provider": "provider[\"registry.terraform.io/hashicorp/kubernetes\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "monitoring",
            "metadata": [
              {
                "generation": 0,
                "name": "monitoring",
                "resource_version": "3132514",
                "uid": "cc691293-d5c0-4128-8ae1-26c35f2321bc"
              }
            ],
            "wait_for_default_service_account": false
          },
          "dependencies": [
            "module.m01-longhorn.helm_release.longhorn",
            "module.m01-longhorn.htpasswd_password.hash",
            "module.m01-longhorn.kubernetes_ingress_v1.longhorn",
            "module.m01-longhorn.kubernetes_namespace_v1.longhorn-system",
            "module.m01-longhorn.kubernetes_secret_v1.longhorn-ui-auth",
            "module.m01-longhorn.random_password.basic_auth_password",
            "module.m01-longhorn.random_password.salt"
          ]
        }
      ]
    },
    {
      "module": "module.m03-minio",
      "mode": "managed",
      "type": "kubernetes_namespace",
      "name": "minio",
      "provider": "provider[\"registry.terraform.io/hashicorp/kubernetes\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "minio",
            "metadata": [
              {
                "generation": 0,
                "name": "minio",
                "resource_version": "3134182",
                "uid": "0f78ebbe-d83e-4464-a928-1b9ece83144d"
              }
            ],
            "wait_for_default_service_account": false
          },
          "dependencies": [
            "module.m01-longhorn.helm_release.longhorn",
            "module.m01-longhorn.htpasswd_password.hash",
            "module.m01-longhorn.kubernetes_ingress_v1.longhorn",
            "module.m01-longhorn.kubernetes_namespace_v1.longhorn-system",
            "module.m01-longhorn.kubernetes_secret_v1.longhorn-ui-auth",
            "module.m01-longhorn.random_password.basic_auth_password",
            "module.m01-longhorn.random_password.salt",
            "module.m02-prometheus-stack.helm_release.prometheus-stack",
            "module.m02-prometheus-stack.kubernetes_ingress_v1.grafana",
            "module.m02-prometheus-stack.kubernetes_namespace.monitoring",
            "module.m02-prometheus-stack.kubernetes_secret_v1.etcd-client-cert",
            "module.m02-prometheus-stack.random_password.grafana_admin_dashboard_password"
          ]
        }
      ]
    },
    {
      "module": "module.m07-efk",
      "mode": "managed",
      "type": "kubernetes_ingress_v1",
      "name": "kibana",
      "provider": "provider[\"registry.terraform.io/hashicorp/kubernetes\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "kube-logging/kibana",
            "metadata": [
              {
                "annotations": null,
                "generate_name": "",
                "generation": 1,
                "labels": null,
                "name": "kibana",
                "namespace": "kube-logging",
                "resource_version": "3131466",
                "uid": "5f55f3df-8323-4bf9-91c7-64ce037d78be"
              }
            ],
            "spec": [
              {
                "default_backend": [],
                "ingress_class_name": "nginx",
                "rule": [
                  {
                    "host": "kibanauat.local",
                    "http": [
                      {
                        "path": [
                          {
                            "backend": [
                              {
                                "resource": [],
                                "service": [
                                  {
                                    "name": "kibana-kibana",
                                    "port": [
                                      {
                                        "name": "",
                                        "number": 5601
                                      }
                                    ]
                                  }
                                ]
                              }
                            ],
                            "path": "/",
                            "path_type": "ImplementationSpecific"
                          }
                        ]
                      }
                    ]
                  }
                ],
                "tls": []
              }
            ],
            "status": [
              {
                "load_balancer": [
                  {
                    "ingress": []
                  }
                ]
              }
            ],
            "timeouts": null,
            "wait_for_load_balancer": null
          },
          "sensitive_attributes": []
        }
      ]
    },
    {
      "module": "module.m07-efk",
      "mode": "managed",
      "type": "kubernetes_namespace",
      "name": "kube-logging",
      "provider": "provider[\"registry.terraform.io/hashicorp/kubernetes\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "kube-logging",
            "metadata": [
              {
                "generation": 0,
                "name": "kube-logging",
                "resource_version": "3131460",
                "uid": "6b1fea46-f7c9-40a7-8ba1-072d310e0648"
              }
            ],
            "wait_for_default_service_account": false
          }
        }
      ]
    }
  ]
}